# mailcapture-python

./: README.md  pyproject.toml
examples/: integration_test.py
mailcapture/: __init__.py  _async_client.py  _client.py  _errors.py  _generate.py  _http.py  _inbox.py  _types.py
tests/: conftest.py  test_async_client.py  test_client.py
